# cpp-practicum

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
00/: Makefile  cmake_install.cmake
01/: Makefile  cmake_install.cmake  main.cpp
02/: Makefile  cmake_install.cmake  main.cpp
03/: Makefile  cmake_install.cmake  main.cpp
lw2/: CMakeCache.txt  Makefile  cmake_install.cmake  file
lw2/00/: Makefile  cmake_install.cmake
lw2/01/: Makefile  cmake_install.cmake  main.cpp
lw2/02/: Makefile  cmake_install.cmake  main.cpp
lw2/03/: Makefile  cmake_install.cmake  main.cpp
lw3/: CMakeLists.txt
lw3/00/: main.cpp
lw3/01/: main.cpp
lw3/03/: main.cpp
lw3/sfml2.1/: main.cpp
lw3/sfml2.2/: main.cpp
lw4/: CMakeLists.txt
lw4/02/: main.cpp
lw4/03/: main.cpp
lw4/04/: main.cpp
lw4/sfml3.1/: CMakeLists.txt  main.cpp
lw4/sfml3.2/: main.cpp
lw4/sfml3.3/: CMakeLists.txt  main.cpp
lw5/: CMakeLists.txt
lw5/workshop1.1/: CMakeLists.txt  main.cpp
lw5/workshop1.2/: main.cpp
lw5/workshop1.3/: main.cpp
lw5/workshop1.4/: main.cpp
